--- a/readme
+++ b/readme
@@ -1,3 +1,10 @@
 Jenkins URL: http://ec2-54-189-150-153.us-west-2.compute.amazonaws.com:8080
 Jenkins user: effectus 
 Jenkins password: password
+
+
+Run Jenkins service:
+    sudo service jenkins start
+
+Check status Jenkins service:
+    sudo service jenkins status 
